--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-	"presets": ["es2015"]
-}
+    "presets": ["@babel/env", "@babel/typescript"],
+    "plugins": [
+      "@babel/proposal-class-properties",
+      "@babel/proposal-object-rest-spread",
+      "@babel/plugin-transform-runtime"
+    ]
+  }
