--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,21 @@
 {
   "env": {
-    "es6": true,
+    "es2020": true,
     "node": true,
     "mocha": true
   },
-  "extends": "eslint:recommended",
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
   "parserOptions": {
     "sourceType": "module"
   },
-  "rules": {
-    "indent": ["error", 2],
-    "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "double"],
-    "semi": ["error", "always"]
-  }
+  "plugins": [
+    "prettier"
+  ]
 }
