--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-	"name": "node-xml-stream-parser",
+	"name": "ts-xml-stream-parser",
 	"version": "1.0.12",
 	"description": "A fast XML parser using streams.",
 	"main": "dist/index.js",
 	"scripts": {
 		"test": "mocha dist/**/*.spec.js",
-		"test:src": "mocha src/**/*.spec.js --compilers js:babel-core/register --watch",
-		"test:src:inspect": "mocha src/**/*.spec.js --compilers js:babel-core/register --watch --inspect-brk",
-		"build": "./node_modules/.bin/babel src --out-dir dist",
-		"lint": "./node_modules/.bin/eslint ./src/**"
+		"test:src": "mocha --require @babel/register --watch --watch-extensions js,ts src/**/*.spec.js ",
+		"test:src:inspect": "mocha --require babel-core/register --watch --watch-extensions js,ts --inspect-brk src/**/*.spec.js ",
+		"build": "webpack",
+		"lint": "eslint . --ext .ts --ext .js"
 	},
 	"keywords": [
 		"XML",
@@ -26,18 +26,35 @@
 		},
 		{
 			"name": "Markus Velten"
+		},
+		{
+			"name": "Jeffrey Drake"
 		}
 	],
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/mfahlandt/node-xml-stream-parser/"
+		"url": "https://github.com/madebyjeffrey/ts-xml-stream-parser"
 	},
 	"devDependencies": {
-		"babel-cli": "^6.26.0",
-		"babel-preset-es2015": "^6.24.1",
-		"chai": "^4.1.0",
-		"eslint": "^4.3.0",
-		"mocha": "^6.1.3"
+		"@babel/cli": "^7.10.4",
+		"@babel/core": "^7.10.4",
+		"@babel/plugin-proposal-class-properties": "^7.10.4",
+		"@babel/plugin-transform-runtime": "^7.10.4",
+		"@babel/preset-env": "^7.10.4",
+		"@babel/preset-typescript": "^7.10.4",
+		"babel-loader": "^8.1.0",
+		"typescript": "^3.9.6",
+		"webpack": "^4.43.0",
+		"webpack-cli": "^3.3.12",
+		"chai": "^4.2.0",
+		"eslint": "^7.4.0",
+		"mocha": "^8.0.1",
+		"@typescript-eslint/parser": "^3.5.0",
+		"@typescript-eslint/eslint-plugin": "^3.5.0",
+		"eslint-plugin-prettier": "^3.1.4",
+		"prettier": "^2.0.5",
+		"eslint-config-prettier": "^6.11.0",
+		"@babel/register": "^7.10.4"
 	}
 }
