--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,22 @@
 {
     "compilerOptions": {
-        "outDir": "./built",
-        "allowJs": true,
-        "target": "es2019",
-        "types": ["node"],
-        "declaration": true
-    }
-}
+      "target": "es5",
+      "module": "commonjs",
+      "moduleResolution": "node",
+      "lib": ["es2015", "es2016"],
+      "types": ["node"],
+      "declaration": true,
+      "removeComments": false,
+      "strict": true,
+      "sourceMap": true,
+      "allowJs": false,
+      "esModuleInterop": true,
+      "baseUrl": "src",
+      "rootDir": "src",
+      "outDir": "dist"
+    },
+    "include": [
+      "src/**/*"
+    ],
+    "exclude": ["node_modules", "dist"]
+  }
