--- a/.eslintrc
+++ b/.eslintrc
@@ -1,21 +1,49 @@
 {
   "env": {
-    "es2020": true,
-    "node": true,
-    "mocha": true
+    "browser": true,
+    "es2021": true
   },
-  "root": true,
-  "parser": "@typescript-eslint/parser",
   "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
+    "airbnb-base",
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
+    "ecmaVersion": 12,
+    "project": "./tsconfig.json",
     "sourceType": "module"
   },
   "plugins": [
+    "@typescript-eslint",
     "prettier"
-  ]
+  ],
+  "settings": {
+    "import/resolver": {
+      "typescript": {
+      }
+    }
+  },
+  "rules": {
+    "import/prefer-default-export": "off",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+    ],
+    "no-template-curly-in-string": "off",
+    "no-new-func": "off",
+    "semi": "off",
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": ["error"],
+    "@typescript-eslint/no-misused-new": "off",
+    "no-underscore-dangle": "off",
+    "class-methods-use-this": "off",
+    "prettier/prettier": ["error"]
+  }
 }
